--- a/app/assets/stylesheets/partials/_forms.scss
+++ b/app/assets/stylesheets/partials/_forms.scss
@@ -6,7 +6,7 @@
 	----------------- */
 
 label {
-	font-weight: bold; 
+	font-weight: bold;
 	font-size: 1em;
 	display: block;
 	margin-top: $padding;
@@ -36,47 +36,47 @@ legend {
 }
 
 fieldset {
-	padding-top: 1.4em; 
+	padding-top: 1.4em;
 }
 
 legend {
 	margin-top: 0;
-	margin-bottom: 0; 
+	margin-bottom: 0;
 }
 
 /* 	INPUT WIDTH
 	----------------- */
 
 .input-tiny {
-	width: 50px; 
+	width: 50px;
 }
 
 .input-small {
-	width: 100px; 
+	width: 100px;
 }
 
 .input-medium {
-	width: 150px; 
+	width: 150px;
 }
 
 .input-large {
-	width: 200px; 
+	width: 200px;
 }
 
 .input-xlarge {
-	width: 250px; 
+	width: 250px;
 }
 
 .input-xxlarge {
-	width: 300px; 
+	width: 300px;
 }
 
 .input-xxxlarge {
-	width: 350px; 
+	width: 350px;
 }
 
 .input-full {
-	width: 100%; 
+	width: 100%;
 }
 
 // Added via JS to <textarea> and class="input-full".
@@ -84,14 +84,14 @@ legend {
 
 .input_full_wrap {
 	display: block;
-	padding-right: 8px; 
+	padding-right: 8px;
 }
 
 /* 	UI Consistency
 	----------------- */
 
 input[type="search"]::-webkit-search-decoration {
-	display: none; 
+	display: none;
 }
 
 button,
@@ -99,7 +99,7 @@ select {
   // Suppress red glow that Firefox
   // adds to form fields by default.
 	&:invalid {
-		@include box-shadow(none); 
+		@include box-shadow(none);
 	}
 }
 
@@ -113,7 +113,7 @@ textarea {
   // adds to form fields by default.
 	&:invalid {
 		@include box-shadow(none); }
-	
+
 }
 
 input[type="file"],
@@ -135,8 +135,8 @@ input[type="radio"],
 input[type="checkbox"] {
 	&:focus,
 	&:active {
-		@include box-shadow(none); 
-	} 
+		@include box-shadow(none);
+	}
 }
 
 button,
@@ -175,17 +175,17 @@ input[type="button"] {
 		@include single-box-shadow( rgba($black, .15), 0, 2px, 3px, 0, true );
 		outline: 0;
 	}
-		
+
 	&::-moz-focus-inner {
 		border: 0;
-		padding: 0; 
-	} 
+		padding: 0;
+	}
 }
 
 button {
 	// IE7
 	*padding-top: 1px;
-	*padding-bottom: 1px; 
+	*padding-bottom: 1px;
 }
 
 textarea,
@@ -223,14 +223,14 @@ input[type="week"] {
 	*padding-bottom: 1px;
 	*height: auto;
 	&[disabled] {
-		background-color: $grayLighter; 
+		background-color: $grayLighter;
 	}
 	&:focus {
 		border-color: rgba(82,168,236,.8);
 		outline: 0;
 		outline: thin dotted \9; /* IE6-9 */
 		@include box-shadow(
-			inset 0 1px 1px rgba($black, .075), 
+			inset 0 1px 1px rgba($black, .075),
 			0 0 8px rgba(82,168,236,.6)
 		);
 	}
@@ -248,7 +248,7 @@ textarea[disabled] {
 	-khtml-user-select: none;
 	user-select: none;
 	color: #888888;
-	cursor: default; 
+	cursor: default;
 }
 
 // Separate rule for Firefox.
@@ -256,23 +256,23 @@ textarea[disabled] {
 // Cannot stack with WebKit's.
 input::-webkit-input-placeholder,
 textarea::-webkit-input-placeholder {
-	color: #888888; 
+	color: #888888;
 }
 
 input:-moz-placeholder,
 textarea:-moz-placeholder {
-	color: #888888; 
+	color: #888888;
 }
 
 input.placeholder_text,
 textarea.placeholder_text {
-	color: #888888; 
+	color: #888888;
 }
 
 textarea,
 select[size],
 select[multiple] {
-	height: auto; 
+	height: auto;
 }
 
 // Set height back to normal,
@@ -281,7 +281,7 @@ select[size="0"],
 select[size="1"] {
 	height: 1.8em;
 	// IE7
-	*height: auto; 
+	*height: auto;
 }
 
 // Tweaks for Safari + Chrome.
@@ -290,18 +290,18 @@ select[size="1"] {
 	select[multiple],
 	select[multiple][size] {
 		background-image: none;
-		padding-right: 3px; 
+		padding-right: 3px;
 	}
-	
+
 	select,
 	select[size="0"],
 	select[size="1"] {
 		background-image: image-url("/assets/select_arrow.gif");
 		background-repeat: no-repeat;
 		background-position: right center;
-		padding-right: 20px; 
+		padding-right: 20px;
 	}
-	
+
 	::-webkit-validation-bubble-message {
 		-webkit-box-shadow: none;
 		box-shadow: none;
@@ -313,24 +313,24 @@ select[size="1"] {
 		overflow: hidden;
 		padding: 15px 15px 17px;
 		@include text-shadow($black 0 0 1px);
-		height: 16px; 
+		height: 16px;
 	}
-	
+
 	::-webkit-validation-bubble-arrow,
 	::-webkit-validation-bubble-top-outer-arrow,
 	::-webkit-validation-bubble-top-inner-arrow {
 		-webkit-box-shadow: none;
 		box-shadow: none;
 		background: #666666;
-		border: 0; 
-	} 
+		border: 0;
+	}
 }
 
 textarea {
 	min-height: 40px;
 	overflow: auto;
 	resize: vertical;
-	width: 100%; 
+	width: 100%;
 }
 
 optgroup {
@@ -343,6 +343,19 @@ optgroup {
 	// border that appears in Firefox.
 	&::-moz-focus-inner {
 		border: 0;
-		padding: 0; 
-	} 
+		padding: 0;
+	}
 }
+
+#unencrypted{
+	color: red;
+	display: block;
+	overflow: hidden;
+	padding-left: 10px;
+}
+
+#description{
+	float: left;
+  width: auto;
+}
+
