creatd password_params_valid methode & wrote tests & refactored update password

--- a/app/views/logins/show_update_password.html.erb
+++ b/app/views/logins/show_update_password.html.erb
@@ -1,4 +1,4 @@
-<% 
+<%
 # $Id$
 
 # Copyright (c) 2007 Puzzle ITC GmbH. All rights reserved.
@@ -18,12 +18,23 @@
 -%>
 
 <h1>Change password</h1>
-<%= form_tag :action => 'pwdchange' do %>
+<%= form_tag action: 'update_password' do %>
 	<fieldset>
-    	<label for="pwdchange_oldpassword"><%= password_field_tag :oldpassword, params[:oldpassword], :autofocus => true  %><%=t '.old' %></label>
-    	<label for="pwdchange_newpassword1"><%= password_field_tag :newpassword1, params[:newpassword1]  %><%=t '.new' %></label>
-    	<label for="pwdchange_newpassword2"><%= password_field_tag :newpassword2, params[:newpassword2]  %><%=t '.new_retype' %></label>
-    	<label for"submit"><%= submit_tag t('.submit') %></label>
+    	<label for="old_password">
+				<%=t '.old' %>
+				<%= password_field_tag :old_password, '',autofocus: true  %>
+			</label>
+    	<label for="new_password1">
+				<%=t '.new' %>
+				<%= password_field_tag :new_password1 %>
+			</label>
+    	<label for="new_password2">
+				<%=t '.new_retype' %>
+				<%= password_field_tag :new_password2 %>
+			</label>
+    	<label for="submit">
+				<%= submit_tag I18n.t('logins.show_update_password.submit') %>
+			</label>
 	</fieldset>
 <% end %>
 
