--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -28,7 +28,7 @@
 						<b class="caret"></b>
 					</a>
 					<ul class="dropdown-menu">
-						<li><%= nav_link "tools", t(:ldap_settings), admin_ldapsettings_path %></li>
+						<li><%= nav_link "tools", t(:ldap_settings), admin_settings_path %></li>
 		        <li><%= nav_link "lock", t(:recrypt_requests), admin_recryptrequests_path %></li>
 		        <li><%= nav_link "person", t(:users), admin_users_path %></li>
 					</ul>
