--- a/app/views/layouts/_locale.html.erb
+++ b/app/views/layouts/_locale.html.erb
@@ -16,12 +16,12 @@
 # You should have received a copy of the GNU Affero General Public License
 # along with this program.  If not, see <http://www.gnu.org/licenses/>.
 -%>
-<% if session[:user_id] %>
-  <% user_locale = User.find( session[:user_id] ).preferred_locale %>
+<% if current_user %>
+  <% user_locale = current_user.preferred_locale %>
   <div id="locale-selection" class="alignright">
 
   <%= form_tag(changelocale_login_path) do %>
-    <select name="locale" onchange="this.form.submit()">
+    <select name="new_locale" onchange="this.form.submit()">
       <%= options_for_select(I18n.available_locales.map{ |locale| [I18n.name_for_locale(locale), locale] }, user_locale) %>
     </select>
   <% end %>
