--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -54,7 +54,7 @@
       <tr class="<%= cycle( 'odd', 'even' ) %>">
         <td><%= link_to user.username, edit_admin_user_path(user) %></td>
         <td><%= user.full_name %></td>
-        <td><%= link_to button_tag("unlock"), admin_user_unlock_path(user.id), method: :post%></td>
+        <td><%= link_to image_tag("unlock.png"),  unlock_admin_user_path(user.id), title: t('.unlock')%></td>
       </tr>
   <% end %>
 </table>
