--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -37,7 +37,7 @@
         <% else %>
           <td></td>
         <% end %>
-        <td><%= link_to image_tag( "remove.png" ), [:admin, user], confirm: t(:confirmation), method: :delete %></td>
+        <td><%= link_to image_tag( "remove.png" ), [:admin, user], data: {confirm: t(:confirmation)}, method: :delete %></td>
       </tr>
   <% end %>
 </table>
