fix assets and assets precompilation

--- a/app/views/logins/login.html.erb
+++ b/app/views/logins/login.html.erb
@@ -31,6 +31,6 @@
     <%= submit_tag t('.submit') %>
   </fieldset>
 <% end %>
-<%= javascript_include_tag 'login'%>
+<%= javascript_include_tag :login %>
 
 
