--- a/app/views/search/index.html.erb
+++ b/app/views/search/index.html.erb
@@ -1,5 +1,5 @@
 <div class='search'>
-  <h1>Hi <%= session[:username] %>! Want to recover a password?</h1>
+  <h1>Hi<%= username %>! Want to recover a password?</h1>
   <%= text_field_tag :search_string,  params[:search_string], :autocomplete => 'off', :autofocus => true, :class => 'search-input' %>
 
 </div>
