bootstrap tables, buttons, form items

--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -2,10 +2,33 @@
   margin-top: 50px;
 }
 
-/* form */
+.container {
+  width: 800px;
+  text-align: center;
+}
+
+.container h1 {
+  font-size: 1.5em;
+}
+
+.container h2 {
+  font-size: 1.1em;
+}
+
+.container .table {
+  text-align: left;
+  margin-top: 60px;
+}
+
+.container form:not(.login) {
+  margin: auto;
+  width: 70%;
+  text-align: left;
+}
+
+/* login form */
 .login-form {
   height: 350px;
-  margin-top: -30px;
   padding: 10px;
   background-image: url("form_bg.svg");
   background-repeat: no-repeat;
@@ -28,4 +51,16 @@
 
 .login-form .btn {
   width: 80%;
+}
+
+/* search and results */
+
+.search {
+  text-align: center;
+}
+
+input.search-input {
+  width: 60%;
+  margin: 4em auto;
+  padding: 1em;
 }
