--- a/app/views/logins/login.html.erb
+++ b/app/views/logins/login.html.erb
@@ -1,5 +1,5 @@
 <div class="login-form">
-  <%= form_tag(action: 'authenticate') do %>
+<%= form_tag({action: 'authenticate'}, {class: 'login'}) do %>
     <fieldset>
       <%= image_tag("logo_cryptopus.svg", class: 'logo') %>
 
