--- a/app/views/accounts/index.html.erb
+++ b/app/views/accounts/index.html.erb
@@ -1,27 +1,10 @@
-<% 
-# $Id$
+<h1><%=t '.title', group_name: @group.name, team_name: @team.name %></h1>
 
-# Copyright (c) 2007 Puzzle ITC GmbH. All rights reserved.
-#
-# This program is free software; you can redistribute it and/or modify
-# it under the terms of the GNU Affero General Public License as published by
-# the Free Software Foundation; either version 3 of the License, or
-# (at your option) any later version.
-#
-# This program is distributed in the hope that it will be useful,
-# but WITHOUT ANY WARRANTY; without even the implied warranty of
-# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-# GNU Affero General Public License for more details.
-#
-# You should have received a copy of the GNU Affero General Public License
-# along with this program.  If not, see <http://www.gnu.org/licenses/>.
--%>
-  
-<h1><%=t '.title', :group_name => @group.name, :team_name => @team.name %></h1>
+<%= link_to 'New', new_team_group_account_path, class: 'btn btn-primary pull-right' %>
 
-<table>
+<table class='table table-striped'>
 
-  <% for account in @accounts %>
+  <% @accounts.each do |account| %>
     <tr class="<%= cycle('odd', 'even') %>">
       <td><%= link_to image_tag( "encrypted_small.png" ) + " " + account.accountname, [@team, @group, account] %></td>
       <td><%= account.description %></td>
