--- a/app/views/admin/recryptrequests/index.html.erb
+++ b/app/views/admin/recryptrequests/index.html.erb
@@ -18,7 +18,7 @@
 -%>
 
 <h1><%=t '.title' %></h1>
-<table>
+<table class='table table-striped'>
   <tr>
     <th><%=t '.user' %></th>
     <th><%=t '.admin_required' %></th>
