--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -1,24 +1,6 @@
-<%
-# $Id$
-# Copyright (c) 2007 Puzzle ITC GmbH. All rights reserved.
-#
-# This program is free software; you can redistribute it and/or modify
-# it under the terms of the GNU Affero General Public License as published by
-# the Free Software Foundation; either version 3 of the License, or
-# (at your option) any later version.
-#
-# This program is distributed in the hope that it will be useful,
-# but WITHOUT ANY WARRANTY; without even the implied warranty of
-# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-# GNU Affero General Public License for more details.
-#
-# You should have received a copy of the GNU Affero General Public License
-# along with this program.  If not, see <http://www.gnu.org/licenses/>.
--%>
-
 <h1><%=t '.title' %></h1>
 
-<table>
+<table class='table table-striped'>
   <tr>
     <th><%=t '.username' %></th>
     <th><%=t '.name' %></th>
@@ -44,7 +26,7 @@
 
 <h2><%=t '.locked' %></h2>
 
-<table>
+<table class='table table-striped'>
   <tr>
       <th><%=t '.username' %></th>
       <th><%=t '.name' %></th>
