--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -1,25 +1,8 @@
-<% 
-# $Id$
-
-# Copyright (c) 2007 Puzzle ITC GmbH. All rights reserved.
-#
-# This program is free software; you can redistribute it and/or modify
-# it under the terms of the GNU Affero General Public License as published by
-# the Free Software Foundation; either version 3 of the License, or
-# (at your option) any later version.
-#
-# This program is distributed in the hope that it will be useful,
-# but WITHOUT ANY WARRANTY; without even the implied warranty of
-# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-# GNU Affero General Public License for more details.
-#
-# You should have received a copy of the GNU Affero General Public License
-# along with this program.  If not, see <http://www.gnu.org/licenses/>.
--%>
-
 <h1><%=t '.title', :team_name => @team.name %></h1>
 
-<table>
+<%= link_to 'New', new_team_group_path, class: 'btn btn-primary pull-right' %>
+
+<table class='table table-striped'>
 
   <tr>
     <th><%=t '.group' %></th>
