--- a/app/views/teams/_form.html.erb
+++ b/app/views/teams/_form.html.erb
@@ -1,40 +1,29 @@
-<% 
-# $Id$
-
-# Copyright (c) 2007 Puzzle ITC GmbH. All rights reserved.
-#
-# This program is free software; you can redistribute it and/or modify
-# it under the terms of the GNU Affero General Public License as published by
-# the Free Software Foundation; either version 3 of the License, or
-# (at your option) any later version.
-#
-# This program is distributed in the hope that it will be useful,
-# but WITHOUT ANY WARRANTY; without even the implied warranty of
-# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-# GNU Affero General Public License for more details.
-#
-# You should have received a copy of the GNU Affero General Public License
-# along with this program.  If not, see <http://www.gnu.org/licenses/>.
--%>
-
-<!--[form:team]-->
-
-<%= form_for( @team ) do |f| %>
+<%= form_for(@team, role: 'form') do |f| %>
   <%= f.error_messages %>
 
-  <%= f.label :name %>
-  <%= f.text_field :name, :autofocus => true %>
+  <div class="form-group">
+    <%= f.label :name %>
+    <%= f.text_field :name, autofocus: true, class: 'form-control' %>
+  </div>
 
-  <%= tooltip t('.private'), :options => { :tooltip => t('.private_hint') }, :class => 'mytooltip' %>
-  <%= f.check_box :private %>
+  <div class="checkbox">
+    <%= f.label :private do %>
+      <%= f.check_box :private %>
+      <%= t('.private') %>
+    <% end %>
+  </div>
 
-  <%= tooltip t('.no_root'), :options => { :tooltip => t('.no_root_hint') }, :class => 'mytooltip' %>
-  <%= f.check_box :noroot %>
+  <div class="checkbox">
+    <%= f.label :noroot do %>
+      <%= f.check_box :noroot %>
+      <%= t('.noroot') %>
+    <% end %>
+  </div>
 
-  <%= f.label :description %>
-  <%= f.text_area :description %>
+  <div class="form-group">
+    <%= f.label :description %>
+    <%= f.text_area :description, class: 'form-control' %>
+  </div>
 
-  <%= f.submit @submit_button_text %>
+  <%= f.submit @submit_button_text, class: 'btn btn-primary' %>
 <% end %>
-<!--[eoform:team]-->
-
