--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -19,7 +19,7 @@
         <% else %>
           <td></td>
         <% end %>
-        <td><%= link_to image_tag( "remove.png" ), [:admin, user], data: {confirm: t(:confirmation)}, method: :delete %></td>
+          <td> <%= delete_button(user) %></td>
       </tr>
   <% end %>
 </table>
