--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -14,12 +14,16 @@
         <td><%= link_to user.username, edit_admin_user_path(user) %></td>
         <td><%= user.full_name %></td>
         <td><%= user.uid.to_s %></td>
-        <% if user.admin == true %>
-          <td><%= image_tag("flag.png") %></td>
-        <% else %>
-          <td></td>
-        <% end %>
-          <td> <%= delete_button(user) %></td>
+        <td>
+          <% if user.admin == true %>
+            <%= image_tag("flag.png") %>
+          <% end %>
+        </td>
+        <td>
+          <% if user != current_user %>
+            <%= link_to image_tag( "remove.png" ), [:admin, user], data: {confirm: t(:confirmation)}, method: :delete %>
+          <% end %>
+        </td>
       </tr>
   <% end %>
 </table>
