--- a/app/views/teams/index.html.erb
+++ b/app/views/teams/index.html.erb
@@ -14,7 +14,11 @@
     <td><%= link_to image_tag( "kontact_contacts.png" ) + " #{team.name}", team_groups_path( team ) %></td>
     <td><%= team.description %></td>
     <td><%= link_to image_tag( "edit.png" ), edit_team_path( team ) %></td>
-    <td><%= link_to image_tag( "remove.png" ), team, data: {confirm: :confirmation}, :method => :delete %></td>
+    <td>
+      <% if can_delete_team?(team) %>
+        <%= link_to image_tag( "remove.png" ), team, data: {confirm: :confirmation}, :method => :delete %>
+      <% end %>
+    </td>
     </tr>
   <% end %>
 </table>
