--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,7 @@
   </head>
 
   <body>
-
+    <%= render partial: 'layouts/icons' %>
     <%= render partial: 'layouts/navigation' %>
     <%= render partial: 'layouts/flashes' %>
 
