--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -4,7 +4,6 @@
 
 .container {
   width: 800px;
-  text-align: center;
 }
 
 .container h1 {
@@ -68,4 +67,78 @@ input.search-input {
   width: 60%;
   margin: 4em auto;
   padding: 1em;
+  height: 3.5em;
+}
+
+.result-list {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  background-color: #D9D9D9;
+  box-shadow: 1px 2px 5px #D9D9D9;
+}
+.result-list li {
+  @include clearfix;
+  display: block;
+  padding: 1em;
+  background: white;
+  margin-top: 1px;
+  min-height: 10em;
+}
+
+.result-description span{
+  float: left;
+  font-size: 15px;
+}
+
+.result-description {
+  float: left;
+  width: 60%;
+}
+.result-action {
+  float: right;
+  width: 35%;
+}
+
+.result-username,
+.result-password {
+  position: relative;
+}
+
+.password-link {
+  display: block;
+  background: #C9C9C9;
+  border-radius: 3px;
+  color: black;
+}
+
+.password-link, .result-username input, .result-password input{
+  padding: 6px 10px;
+  width: 205px;
+  font-size: 14px;
+  border: 1px solid #C9C9C9;
+}
+
+.result-username input:hover, .result-password input:hover{
+    cursor:text;
+}
+
+.clip_button {
+  position: absolute;
+  top: 0;
+  right: 0;
+}
+
+.result-password {
+  margin-top: 0.5em;
+}
+
+/*Icons*/
+
+[class^="icon-"],
+[class*=" icon-"] {
+  height: 24px;
+  width: 30px;
+  display: inline;
+  fill: currentColor;
 }
