--- a/app/views/logins/show_update_password.html.erb
+++ b/app/views/logins/show_update_password.html.erb
@@ -1,40 +1,28 @@
-<%
-# $Id$
-
-# Copyright (c) 2007 Puzzle ITC GmbH. All rights reserved.
-#
-# This program is free software; you can redistribute it and/or modify
-# it under the terms of the GNU Affero General Public License as published by
-# the Free Software Foundation; either version 3 of the License, or
-# (at your option) any later version.
-#
-# This program is distributed in the hope that it will be useful,
-# but WITHOUT ANY WARRANTY; without even the implied warranty of
-# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-# GNU Affero General Public License for more details.
-#
-# You should have received a copy of the GNU Affero General Public License
-# along with this program.  If not, see <http://www.gnu.org/licenses/>.
--%>
-
 <h1>Change password</h1>
-<%= form_tag action: 'update_password' do %>
-	<fieldset>
-    	<label for="old_password">
-				<%=t '.old' %>
-				<%= password_field_tag :old_password, '',autofocus: true  %>
-			</label>
-    	<label for="new_password1">
-				<%=t '.new' %>
-				<%= password_field_tag :new_password1 %>
-			</label>
-    	<label for="new_password2">
-				<%=t '.new_retype' %>
-				<%= password_field_tag :new_password2 %>
-			</label>
-    	<label for="submit">
-				<%= submit_tag I18n.t('logins.show_update_password.submit') %>
-			</label>
-	</fieldset>
-<% end %>
 
+<%= form_tag action: 'update_password', role: 'form' do %>
+
+  <div class="form-group">
+    <label for="old_password">
+      <%=t '.old' %>
+    </label>
+    <%= password_field_tag :old_password, '',autofocus: true, class: 'form-control'  %>
+  </div>
+
+  <div class="form-group">
+    <label for="new_password1">
+      <%=t '.new' %>
+    </label>
+    <%= password_field_tag :new_password1, nil, class: 'form-control' %>
+  </div>
+
+  <div class="form-group">
+    <label for="new_password2">
+      <%=t '.new_retype' %>
+    </label>
+    <%= password_field_tag :new_password2, nil, class: 'form-control' %>
+  </div>
+
+  <%= submit_tag I18n.t('logins.show_update_password.submit'), class: 'btn btn-primary' %>
+
+<% end %>
