--- a/app/views/layouts/_flashes.html.erb
+++ b/app/views/layouts/_flashes.html.erb
@@ -1,6 +1,5 @@
 <% if flash[:notice] %>
   <div class="alert alert-info"><%= flash[:notice] %></div>
-<% end %>
-<% if flash[:error] %>
+<% elsif flash[:error] %>
   <div class="alert alert-danger"><%= flash[:error] %></div>
 <% end %>
